// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DontTest 300x200 1`] = `
<section
  className="Container__exports-cGduGO fOZQpl"
>
  <section
    className="SnapshotContainer__exports-juqyDE cvtFfE"
  >
    <section
      className="TitleContainer__exports-jiahkD iLyDXR"
    >
      <h1
        className="Name__exports-gSXVVu eYqhoI"
      >
        Detail
      </h1>
      <h2
        className="Address__exports-jIoDPS fZMSS"
      >
        
      </h2>
    </section>
    <img
      className="Snapshot__exports-kDzhxQ izwiEp"
      src="/placeholder/images/300x200.png"
    />
  </section>
  <iframe
    allowFullScreen={true}
    frameBorder="0"
    height="100%"
    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAQ7RQzfSTq4MxmLwxByZzS-g42hFly1FU&q=Al+Masjid+Al+Awwal+Pittsburgh+PA"
    style={Object {}}
    width="100%"
  />
  <section
    className="Container__exports-cGduGO ehSZlk"
    style={Object {}}
  >
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--facebook"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--facebook "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#3b5998"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--twitter"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--twitter "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#00aced"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--pinterest"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--pinterest "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#cb2128"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
  </section>
</section>
`;

exports[`Storyshots DontTest 500x500 1`] = `
<section
  className="Container__exports-cGduGO fOZQpl"
>
  <section
    className="SnapshotContainer__exports-juqyDE cvtFfE"
  >
    <section
      className="TitleContainer__exports-jiahkD iLyDXR"
    >
      <h1
        className="Name__exports-gSXVVu eYqhoI"
      >
        Detail
      </h1>
      <h2
        className="Address__exports-jIoDPS fZMSS"
      >
        
      </h2>
    </section>
    <img
      className="Snapshot__exports-kDzhxQ izwiEp"
      src="/placeholder/images/500x500.png"
    />
  </section>
  <iframe
    allowFullScreen={true}
    frameBorder="0"
    height="100%"
    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAQ7RQzfSTq4MxmLwxByZzS-g42hFly1FU&q=Al+Masjid+Al+Awwal+Pittsburgh+PA"
    style={Object {}}
    width="100%"
  />
  <section
    className="Container__exports-cGduGO ehSZlk"
    style={Object {}}
  >
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--facebook"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--facebook "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#3b5998"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--twitter"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--twitter "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#00aced"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--pinterest"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--pinterest "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#cb2128"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
  </section>
</section>
`;

exports[`Storyshots DontTest 500x1000 1`] = `
<section
  className="Container__exports-cGduGO fOZQpl"
>
  <section
    className="SnapshotContainer__exports-juqyDE cvtFfE"
  >
    <section
      className="TitleContainer__exports-jiahkD iLyDXR"
    >
      <h1
        className="Name__exports-gSXVVu eYqhoI"
      >
        Detail
      </h1>
      <h2
        className="Address__exports-jIoDPS fZMSS"
      >
        
      </h2>
    </section>
    <img
      className="Snapshot__exports-kDzhxQ izwiEp"
      src="/placeholder/images/500x1000.png"
    />
  </section>
  <iframe
    allowFullScreen={true}
    frameBorder="0"
    height="100%"
    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAQ7RQzfSTq4MxmLwxByZzS-g42hFly1FU&q=Al+Masjid+Al+Awwal+Pittsburgh+PA"
    style={Object {}}
    width="100%"
  />
  <section
    className="Container__exports-cGduGO ehSZlk"
    style={Object {}}
  >
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--facebook"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--facebook "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#3b5998"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--twitter"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--twitter "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#00aced"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--pinterest"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--pinterest "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#cb2128"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
  </section>
</section>
`;

exports[`Storyshots DontTest 1000x500 1`] = `
<section
  className="Container__exports-cGduGO fOZQpl"
>
  <section
    className="SnapshotContainer__exports-juqyDE cvtFfE"
  >
    <section
      className="TitleContainer__exports-jiahkD iLyDXR"
    >
      <h1
        className="Name__exports-gSXVVu eYqhoI"
      >
        Detail
      </h1>
      <h2
        className="Address__exports-jIoDPS fZMSS"
      >
        
      </h2>
    </section>
    <img
      className="Snapshot__exports-kDzhxQ izwiEp"
      src="/placeholder/images/1000x500.png"
    />
  </section>
  <iframe
    allowFullScreen={true}
    frameBorder="0"
    height="100%"
    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAQ7RQzfSTq4MxmLwxByZzS-g42hFly1FU&q=Al+Masjid+Al+Awwal+Pittsburgh+PA"
    style={Object {}}
    width="100%"
  />
  <section
    className="Container__exports-cGduGO ehSZlk"
    style={Object {}}
  >
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--facebook"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--facebook "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#3b5998"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--twitter"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--twitter "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#00aced"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
    <section
      className="IconHolder__exports-bBLAEH dhAznO"
    >
      <div
        className="SocialMediaShareButton SocialMediaShareButton--pinterest"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        <div
          style={
            Object {
              "height": 32,
              "width": 32,
            }
          }
        >
          <svg
            className="social-icon social-icon--pinterest "
            fill="white"
            height={32}
            viewBox="0 0 64 64"
            width={32}
          >
            <g>
              <rect
                fill="#cb2128"
                height="64"
                style={Object {}}
                width="64"
              />
            </g>
            <g>
              <path
                d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
              />
            </g>
          </svg>
        </div>
      </div>
    </section>
  </section>
</section>
`;
